// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerDocked [snapshot] should render the "Default" component correctly 1`] = `
<div>
  <div
    class="text-xs flex px-5 py-3 text-sm rounded shadow-lg bg-primary-light items-center"
  >
    <img
      alt="The track cover of ANSI.SYS • MASTER BOOT RECORD"
      class="rounded mr-3"
      src="https://picsum.photos/50"
      style="width: 3rem; height: 3rem;"
    />
    <div
      class="flex flex-col"
    >
      <div>
        <span
          class="font-bold"
        >
          ANSI.SYS
        </span>
        <span
          class="px-1"
        >
          •
        </span>
        
        <span>
          MASTER BOOT RECORD
        </span>
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="flex ml-auto"
    >
      <span
        class="flex text-neutral mr-3 text-black"
      >
        <svg
          class="inline-block align-middle w-6 h-6"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
            style="fill: currentColor;"
          />
        </svg>
        <!--v-if-->
      </span>
      <svg
        class="inline-block align-middle w-6 h-6"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.5,8.64L13.77,12L8.5,15.36V8.64M6.5,5V19L17.5,12"
          style="fill: currentColor;"
        />
      </svg>
    </div>
  </div>
  <div
    class="overflow-hidden h-1 rounded-full bg-primary/20 mx-5 translate-y-[-50%]"
  >
    <div
      class="h-full bg-primary"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`PlayerDocked [snapshot] should render the "ListeningOnDesktop" component correctly 1`] = `
<div>
  <div
    class="text-xs flex px-5 py-3 text-sm rounded shadow-lg bg-primary-light items-center"
  >
    <img
      alt="The track cover of ANSI.SYS • MASTER BOOT RECORD"
      class="rounded mr-3"
      src="https://picsum.photos/50"
      style="width: 3rem; height: 3rem;"
    />
    <div
      class="flex flex-col"
    >
      <div>
        <span
          class="font-bold"
        >
          ANSI.SYS
        </span>
        <span
          class="px-1"
        >
          •
        </span>
        
        <span>
          MASTER BOOT RECORD
        </span>
        
      </div>
      <span
        class="text-primary"
      >
        <svg
          class="inline-block align-middle w-4.5 h-4.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M 3 3 C 1.895 3 1 3.895 1 5 L 1 17 C 1 18.105 1.895 19 3 19 L 8 19 L 8 21 L 16 21 L 16 19 L 21 19 C 22.105 19 23 18.105 23 17 L 23 5 C 23 3.895 22.105 3 21 3 L 3 3 z M 3 5 L 21 5 L 21 17 L 3 17 L 3 5 z M 11 7 L 11 11 A 2 2 0 0 0 9 13 A 2 2 0 0 0 11 15 A 2 2 0 0 0 13 13 L 13 9 L 15 9 L 15 7 L 11 7 z"
            style="fill: currentColor;"
          />
        </svg>
        <span
          class="ml-1 align-middle"
        >
          Desktop-B9M8G7J
        </span>
      </span>
    </div>
    <div
      class="flex ml-auto"
    >
      <span
        class="flex text-neutral mr-3 text-black"
      >
        <svg
          class="inline-block align-middle w-6 h-6"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
            style="fill: currentColor;"
          />
        </svg>
        <!--v-if-->
      </span>
      <svg
        class="inline-block align-middle w-6 h-6"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.5,8.64L13.77,12L8.5,15.36V8.64M6.5,5V19L17.5,12"
          style="fill: currentColor;"
        />
      </svg>
    </div>
  </div>
  <div
    class="overflow-hidden h-1 rounded-full bg-primary/20 mx-5 translate-y-[-50%]"
  >
    <div
      class="h-full bg-primary"
      style="width: 50%;"
    />
  </div>
</div>
`;
